Fix overflow of intro title on desktop

--- a/css/stylus/intro.styl
+++ b/css/stylus/intro.styl
@@ -17,6 +17,7 @@ section#intro {
 		height: 250px;
 		text-align: center;
 		margin: 0 auto;
+		overflow-x: hidden;
 	}
 	
 	.intro-bg-wrap {
